juego logica intercambio5

--- a/logic-game/intercambio/style.css
+++ b/logic-game/intercambio/style.css
@@ -431,7 +431,7 @@ line.connection.blocked {
 }
 
 .tutorial-overlay:not(.hidden) {
-    pointer-events: all;
+    pointer-events: auto;
     opacity: 1;
 }
 
